# dotprofiles

./: .gitignore  Cargo.toml  README.md
.github/workflows/: alpha.yml
config/: Cargo.toml
config/src/: config.rs  lib.rs
dotprofiles/: Cargo.toml
dotprofiles-pkgmgmt/: Cargo.toml
dotprofiles-pkgmgmt/src/: lib.rs  scoop.rs
dotprofiles/src/: activate.rs  apply.rs  list.rs  main.rs  pkg.rs
dotprofiles/src/apply/: aider.rs
dotprofiles/src/pkg/: info.rs
installer/: install.ps1
pkgmgmt/: Cargo.toml
pkgmgmt/src/: lib.rs  package_manager.rs  scoop.rs
src/: config.rs  main.rs
