[package]
name = "dotprofilers"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "dp"
path = "src/bin/dp.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "cargo"] }
log = "0.4.27"
env_logger = "0.11.8"
lazy_static = "1.5.0"
dirs-next = "2.0.0"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"

dotprofilers-pkgmgmt = { path = "pkgmgmt" }
