[workspace]
members = ["dotprofiles", "config", "dotprofiles-pkgmgmt"]
resolver = "3"

[workspace.dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "cargo"] }
log = "0.4.27"
env_logger = "0.11.8"
lazy_static = "1.5.0"
dirs-next = "2.0.0"
toml = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
config = { path = "config" }
dotprofiles-pkgmgmt = { path = "dotprofiles-pkgmgmt" }
